--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -19,6 +19,9 @@
   <strong>Task type:</strong>
   <%= @ticket.task_type %>
 </p>
-
+<p>
+  <strong>Programmer</strong>
+  <%= full_name(@ticket.programmer) %>
+</p>
 <%= link_to 'Edit', edit_ticket_path(@ticket) %> |
 <%= link_to 'Back', tickets_path %>
